--- a/wp-content/themes/cetm-child/Index.html
+++ b/wp-content/themes/cetm-child/Index.html
@@ -9,7 +9,7 @@
     <link href="../flatsome/assets/css/fl-icons.css" rel="stylesheet" />
     <link href="../flatsome/assets/css/flatsome.css" rel="stylesheet" />
     <link href="../flatsome/assets/css/ie-fallback.css" rel="stylesheet" />
-    <!--overwrite style-->    
+    <!--overwrite style-->
     <link href="styles/fontawesome-all.css" rel="stylesheet" />
     <link href="styles/bootstrap.css" rel="stylesheet" />
     <link href="styles/lib/swiper.css" rel="stylesheet" />
@@ -84,48 +84,99 @@
                         <div class="swiper-container main-slider loading">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <figure class="slide-bgimg" style="background-image: url('images/keleigko7pu-brooke-cagle.jpg');">
-                                        <img src="images/keleigko7pu-brooke-cagle.jpg" class="entity-img" />
+                                    <figure class="slide-bgimg" style="background-image: url('images/solution_3.jpg');">
+                                        <img src="images/solution_3.jpg" class="entity-img" />
                                     </figure>
-                                    <div class="content">
-                                        <p class="title">Shaun Matthews</p>
-                                        <span class="caption">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                                    <div class="content-bg">
+                                        <p class="title">digital <span>signage</span></p>
+                                        <div class="caption">
+                                            <span>Giúp doanh nghiệp quản lý đồng bộ các nội dung quảng cáo trên toàn hệ thống</span>
+                                            <a href="/" title="xem thêm" class="see-more">Xem thêm <i class="icon-play"></i></a>
+                                        </div>                                        
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
-                                    <figure class="slide-bgimg" style="background-image: url('images/jy992j_7gus-clem-onojeghuo.jpg');">
-                                        <img src="images/jy992j_7gus-clem-onojeghuo.jpg" class="entity-img" />
+                                    <figure class="slide-bgimg" style="background-image: url('images/solution_8.jpg');">
+                                        <img src="images/solution_8.jpg" class="entity-img" />
                                     </figure>
-                                    <div class="content">
-                                        <p class="title">Alexis Berry</p>
-                                        <span class="caption">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                                    <div class="content-bg">
+                                        <p class="title">digital <span>signage</span></p>
+                                        <div class="caption">
+                                            <span>Giúp doanh nghiệp quản lý đồng bộ các nội dung quảng cáo trên toàn hệ thống</span>
+                                            <a href="/" title="xem thêm" class="see-more">Xem thêm <i class="icon-play"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
-                                    <figure class="slide-bgimg" style="background-image: url('images/f37rwpdmon4-patrick-tomasso.jpg'); ">
-                                        <img src="images/f37rwpdmon4-patrick-tomasso.jpg" class="entity-img" />
+                                    <figure class="slide-bgimg" style="background-image: url('images/solution_6.jpg'); ">
+                                        <img src="images/solution_6.jpg" class="entity-img" />
                                     </figure>
-                                    <div class="content">
-                                        <p class="title">Billie	Pierce</p>
-                                        <span class="caption">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                                    <div class="content-bg">
+                                        <p class="title">digital <span>signage</span></p>
+                                        <div class="caption">
+                                            <span>Giúp doanh nghiệp quản lý đồng bộ các nội dung quảng cáo trên toàn hệ thống</span>
+                                            <a href="/" title="xem thêm" class="see-more">Xem thêm <i class="icon-play"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
-                                    <figure class="slide-bgimg" style="background-image: url('images/if_ybk5ubp0-yury-orlov.jpg');">
-                                        <img src="images/if_ybk5ubp0-yury-orlov.jpg" class="entity-img" />
+                                    <figure class="slide-bgimg" style="background-image: url('images/solution_1.jpg');">
+                                        <img src="images/solution_1.jpg" class="entity-img" />
                                     </figure>
-                                    <div class="content">
-                                        <p class="title">Trevor	Copeland</p>
-                                        <span class="caption">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                                    <div class="content-bg">
+                                        <p class="title">digital <span>signage</span></p>
+                                        <div class="caption">
+                                            <span>Giúp doanh nghiệp quản lý đồng bộ các nội dung quảng cáo trên toàn hệ thống</span>
+                                            <a href="/" title="xem thêm" class="see-more">Xem thêm <i class="icon-play"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide">
-                                    <figure class="slide-bgimg" style="background-image: url('images/jose-alfredo-lerma-contreras-256940.jpg');">
-                                        <img src="images/jose-alfredo-lerma-contreras-256940.jpg" class="entity-img" />
+                                    <figure class="slide-bgimg" style="background-image: url('images/solution_7.jpg');">
+                                        <img src="images/solution_7.jpg" class="entity-img" />
                                     </figure>
-                                    <div class="content">
-                                        <p class="title">Bernadette	Newman</p>
-                                        <span class="caption">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</span>
+                                    <div class="content-bg">
+                                        <p class="title">digital <span>signage</span></p>
+                                        <div class="caption">
+                                            <span>Giúp doanh nghiệp quản lý đồng bộ các nội dung quảng cáo trên toàn hệ thống</span>
+                                            <a href="/" title="xem thêm" class="see-more">Xem thêm <i class="icon-play"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <figure class="slide-bgimg" style="background-image: url('images/solution_2.jpg');">
+                                        <img src="images/solution_2.jpg" class="entity-img" />
+                                    </figure>
+                                    <div class="content-bg">
+                                        <p class="title">digital <span>signage</span></p>
+                                        <div class="caption">
+                                            <span>Giúp doanh nghiệp quản lý đồng bộ các nội dung quảng cáo trên toàn hệ thống</span>
+                                            <a href="/" title="xem thêm" class="see-more">Xem thêm <i class="icon-play"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <figure class="slide-bgimg" style="background-image: url('images/solution_4.jpg');">
+                                        <img src="images/solution_4.jpg" class="entity-img" />
+                                    </figure>
+                                    <div class="content-bg">
+                                        <p class="title">digital <span>signage</span></p>
+                                        <div class="caption">
+                                            <span>Giúp doanh nghiệp quản lý đồng bộ các nội dung quảng cáo trên toàn hệ thống</span>
+                                            <a href="/" title="xem thêm" class="see-more">Xem thêm <i class="icon-play"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <figure class="slide-bgimg" style="background-image: url('images/solution_5.jpg');">
+                                        <img src="images/solution_5.jpg" class="entity-img" />
+                                    </figure>
+                                    <div class="content-bg">
+                                        <p class="title">digital <span>signage</span></p>
+                                        <div class="caption">
+                                            <span>Giúp doanh nghiệp quản lý đồng bộ các nội dung quảng cáo trên toàn hệ thống</span>
+                                            <a href="/" title="xem thêm" class="see-more">Xem thêm <i class="icon-play"></i></a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -140,7 +191,7 @@
                                     <div class="content">
                                         <p>Phản hồi khách hàng</p>
                                     </div>
-                                    <i class="arrow-r"><img src="images/arrow.PNG" /></i>                                    
+                                    <i class="arrow-r"><img src="images/arrow.PNG" /></i>
                                 </div>
                                 <div class="swiper-slide">
                                     <div class="content">
@@ -169,6 +220,24 @@
                                     </div>
                                     <i class="arrow-r"><img src="images/arrow.PNG" /></i>
                                 </div>
+                                <div class="swiper-slide">
+                                    <div class="content">
+                                        <p>Khách hàng tự phục vụ</p>
+                                    </div>
+                                    <i class="arrow-r"><img src="images/arrow.PNG" /></i>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="content">
+                                        <p>Phân tích kinh doanh</p>
+                                    </div>
+                                    <i class="arrow-r"><img src="images/arrow.PNG" /></i>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="content">
+                                        <p>Phân tích truyền thông</p>
+                                    </div>
+                                    <i class="arrow-r"><img src="images/arrow.PNG" /></i>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -184,22 +253,22 @@
                                     <span>ngân hàng</span>
                                 </label>
                             </div>
-                            <div class="item" style="background-image: url('images/ac_2.JPG');">
+                            <div class="item" style="background-image: url('images/acc_2.jpg');">
                                 <label>
                                     <span>bệnh viện</span>
                                 </label>
                             </div>
-                            <div class="item" style="background-image: url('images/ac_3.JPG');">
+                            <div class="item" style="background-image: url('images/acc_3.jpg');">
                                 <label>
                                     <span>viễn thông</span>
                                 </label>
                             </div>
-                            <div class="item" style="background-image: url('images/ac_4.JPG');">
+                            <div class="item" style="background-image: url('images/acc_4.jpg');">
                                 <label>
                                     <span>hành chính</span>
                                 </label>
                             </div>
-                            <div class="item" style="background-image: url('images/ac_2.JPG');">
+                            <div class="item" style="background-image: url('images/Other.jpg');">
                                 <label>
                                     <span>lĩnh vực khác</span>
                                 </label>
@@ -357,13 +426,13 @@
                     <div class="col col-md-3 cus-contact">
                         <form>
                             <div class="form-group name">
-                                <input class="form-control" type="text" placeholder="Name" name="name"/>
+                                <input class="form-control" type="text" placeholder="Name" name="name" />
                             </div>
                             <div class="form-group phone">
-                                <input class="form-control" type="text" placeholder="Phone" name="phone"/>
+                                <input class="form-control" type="text" placeholder="Phone" name="phone" />
                             </div>
                             <div class="form-group email">
-                                <input class="form-control" type="text" placeholder="Email" name="email"/>
+                                <input class="form-control" type="text" placeholder="Email" name="email" />
                             </div>
                             <div class="text-right">
                                 <button class="button-primary" type="submit">
@@ -381,6 +450,6 @@
     <script src="scripts/swiper.js"></script>
     <script src="scripts/slick.min.js"></script>
     <script src="scripts/custom.js"></script>
-    <script src="scripts/page/home.js"></script>    
+    <script src="scripts/page/home.js"></script>
 </body>
 </html>
