update register demo

--- a/wp-content/themes/cetm-child/element.html
+++ b/wp-content/themes/cetm-child/element.html
@@ -19,7 +19,6 @@
 <!--add class 'cetm-web' to body-->
 <body class="home page-template page-template-page-transparent-header-light page-template-page-transparent-header-light-php page page-id-2862 page-parent lightbox lazy-icons nav-dropdown-has-arrow">
     <div id="wrapper">
-
         <main id="main" class="">
             <div id="content" role="main" class="container" style="background-color:#8c8c8c">
                 <div style="height:500px;background-color:#8c8c8c;"></div>
@@ -57,7 +56,7 @@
                         <!--html here-->
                         <div class="buble-box">
                             <p>html class "buble-box"</p>
-                        </div>                        
+                        </div>
                     </div>
                     <div class="col-xs-4">
                         <div class="buble-box bottom-arrow">
@@ -80,14 +79,62 @@
                         </div>
                     </div>
                 </div>
+                <div>
+                    <a href="javascript:void(0)" class="register-demo">đăng ký demo</a>
+                </div>
             </div>
         </main>
     </div>
+    <!--<div id="myModal" class="modal fade modal-register mrw-pop in" role="dialog" style="display:block;">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">×</button>
+                    <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="text-center">Gửi đăng ký demo giải pháp cho chúng tôi để được hỗ trợ về giải pháp và sản phẩm.</p>
+                    <form action="/wp-admin/api.php">
+                        <div class="form-group name">
+                            <input type="text" class="form-control" id="exampleInputEmail1" name="fullname" aria-describedby="emailHelp" placeholder="Họ và tên">
+                        </div>
+                        <div class="form-group phone">
+                            <input type="text" class="form-control" id="exampleInputPassword1" name="phone" placeholder="Số điện thoại">
+                        </div>
+                        <div class="form-group email">
+                            <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp" placeholder="Email">
+                        </div>
+                        <div class="form-group select-demo">
+                            <select class="form-control">
+                                <option value="0">Xếp hàng thông minh</option>
+                                <option value="1">Quảng cáo thông minh</option>
+                                <option value="2">Đặt chỗ thông minh</option>
+                                <option value="3">Phản hồi thông minh</option>
+                                <option value="4">Nhận diện thông minh</option>
+                                <option value="5">Xếp hàng thông minh</option>
+                            </select>
+                        </div>
+                        <div class="form-group content">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="message" placeholder="Tin nhắn"></textarea>
+                        </div>
+                        <input type="hidden" name="type" value="LIENHE">
+
+                    </form>
+                </div>
+                <div class="text-center group-submit">
+                    <button type="submit" class="btn btn-primary send-btn">Gửi đăng kí</button>
+                </div>
+            </div>
+        </div>
+    </div>-->
     <script src="scripts/jquery.js"></script>
     <script src="scripts/bootstrap.js"></script>
-    <script src="scripts/swiper.js"></script>
-    <script src="scripts/slick.min.js"></script>
     <script src="scripts/custom.js"></script>
-    <script src="scripts/page/home.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var comFnc = new CommonFunction();
+            comFnc.popupRegister()
+        })
+    </script>
 </body>
 </html>
