--- a/wp-content/themes/cetm-child/Index.html
+++ b/wp-content/themes/cetm-child/Index.html
@@ -446,7 +446,7 @@
                             <img src="images/logo_white.PNG" alt="miraway cetm" />
                         </a>
                     </h1>
-                    <ul class="menu">
+                    <ul class="menu-footer">
                         <li><a href="/">trang chủ</a></li>
                         <li><a href="/">về chúng tôi</a></li>
                         <li><a href="/">giải pháp</a></li>
