--- a/wp-content/themes/cetm-child/element.html
+++ b/wp-content/themes/cetm-child/element.html
@@ -59,22 +59,22 @@
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <div class="buble-box bottom-arrow">
+                        <div class="buble-box bottom-arrow color-1">
                             <p>html class "buble-box bottom-arrow"</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <div class="buble-box bottom-arrow box-border">
+                        <div class="buble-box bottom-arrow box-border color-2">
                             <p>html class "buble-box bottom-arrow box-border"</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <div class="buble-box bottom-arrow box-border arrow-right">
+                        <div class="buble-box bottom-arrow box-border arrow-right color-3">
                             <p>html class "buble-box bottom-arrow box-border arrow-right"</p>
                         </div>
                     </div>
                     <div class="col-xs-4">
-                        <div class="buble-box bottom-arrow box-esclip arrow-right">
+                        <div class="buble-box bottom-arrow box-esclip arrow-right color-4">
                             <p>html class "buble-box bottom-arrow box-esclip arrow-right"</p>
                         </div>
                     </div>
